<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_your_today_planner"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_button_rounded"
        android:contentDescription="@string/login_sign_in"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_let_s_get_started"
        android:textStyle="bold"
        android:textColor="@color/descriptionColor"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/login_sign_in_description"
        android:textSize="18sp"
        android:textColor="@color/descriptionColor"
        android:maxLines="2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/vk_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/sign_in"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/login_vk_sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>