<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_width="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/task_card"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:cardCornerRadius="10dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorItemStroke"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="?attr/colorItemBackground"
            android:id="@+id/task_row_background"
            android:layout_height="match_parent"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_width="match_parent">

            <ImageView
                android:background="@drawable/priority_indicator_background"
                android:contentDescription="@string/tasks_priority"
                android:id="@+id/priority_indicator"
                android:layout_height="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="16dp"
                app:layout_constraintBottom_toBottomOf="@id/due_date_chip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/due_date_chip" />

            <TextView
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:id="@+id/title_textView"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="4dp"
                android:layout_width="0dp"
                android:maxLines="1"
                android:textColor="?attr/colorTextNormal"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/due_date_chip"
                tools:text="@string/tasks_item_title" />

            <View
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/title_textView" />

            <com.google.android.material.chip.Chip
                android:id="@+id/due_date_chip"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                app:chipIcon="@drawable/ic_baseline_today_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/description_textView"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:maxLines="3"
                android:textColor="?attr/colorTextNormalLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/title_textView"
                app:layout_constraintTop_toBottomOf="@id/title_textView"
                tools:text="@string/tasks_item_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>